fix scrollbar heigth

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
 }
 
 ::-webkit-scrollbar {
+  height: 100%;
   width: 0.5em;
 }
 
